Skycons instead of climacons due to issues on firefox

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,14 +7,14 @@ html {
 }
 
 body {
-    background: $primaryColor;
     height: 100%;
+    background: $primaryColor;
 }
 
 .weather-wrapper {
-    background: $primaryColor;
     padding: 20px 0;
     min-height: 100%;
+    background: $primaryColor;
     transition: background 0.2s ease;
 
     &.day {
@@ -40,11 +40,11 @@ body {
 }
 
 .city {
-    border: none;
     display: block;
     margin: 10px 0;
     padding: 20px;
     width: 100%;
+    border: none;
 }
 
 .city:focus {
@@ -56,13 +56,19 @@ body {
     color: #fff;
 }
 
+.weather-today {
+    margin: 40px 0 0;
+}
+
 .weather-icon {
+    display: block;
+    float: right;
     width: 250px;
 }
 
 .now {
-    font-size: 200px;
     color: #fff;
+    font-size: 200px;
 }
 
 .weather-forecast > div {
